terraform_sandbox/module2/sg/sg.tf
resource "aws_security_group" "web_access_sg" {
    name = "web_access_sg_name"
  
     ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }


  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }


  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }


  tags = {
    Name = "allow_web_traffic"
  }

}

output "name" {
  value = aws_security_group.web_access_sg.name
}
